--- a/app/style/components/_header.scss
+++ b/app/style/components/_header.scss
@@ -20,53 +20,17 @@
 		justify-content: space-between;	
 	}	
 	.logo-container{		
-		width: 200px;
-    height: 100px;
+		width: 200px;    
 	}
 	.logo{
 		width: 100%;		
 		height: 100%;
   	object-fit: contain;
 	}
-	.header-info{
+	.nav{
 		display: flex;
-  	flex-direction: column;
-  	justify-content: space-between;  	
-	}
-	.social{
-		display: flex;
-		flex-wrap: wrap;    	
-    	align-items: center;
-    	justify-content: center;
-    	@include breakpoint(medium){
-    		justify-content: flex-end;
-    	}
-	}
-	.mailto{
-		display: inline-block;		
-		white-space: nowrap;		
-	}
-	.phone-container{
-		display: flex;
-		align-items: center;
-		margin-left: 20px;		
-	}
-	.phone{
-		display: inline-block;				
-		white-space: nowrap;
-	}
-	.facebook-link{
-		margin-left: 20px;
-	}
-	.facebook{
-		height: 20px;				
-	}
-	.instagram-link{
-		margin-left: 20px;
-	}
-	.instagram{
-		height: 20px;		
-	}
+    align-items: center;
+	}	
 	.nav-list{
 		margin: 0 20px;
     	padding: 0;
@@ -80,8 +44,7 @@
 	}	
 
 	.list-item{
-		position: relative;
-		z-index: 10;
+		position: relative;		
 		padding: 0 5px;
 		&:not(:last-child){
 			//margin-right: 10px;
@@ -95,7 +58,7 @@
 			color: $active-color;
 		}	
 		display: block;	
-		cursor: pointer;
+		cursor: pointer;		
 	}
 	.nuv-sublist{
 		display: none;
@@ -106,6 +69,7 @@
 		position: absolute;		
 		top: 100%;
 		left: 0;
+		z-index: 20;
 	}	
 	.sublist-item{
 		display: block;
@@ -125,6 +89,6 @@
 	}
 
 	.list-item:hover > .nuv-sublist {
-    	display: block;
+    	display: block; 
 	}
 }
