--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -32,6 +32,7 @@ html {
 
 @import "components/header";
 @import "components/footer";
+@import "components/modal";
 
 /*=========================================================
 ///////////////////////////////////////////////////////////
