--- a/app/style/components/_modal.scss
+++ b/app/style/components/_modal.scss
@@ -7,6 +7,7 @@
   min-height: 100vh;
   background-color: rgba(0,0,0,0.7);
   display: none; 
+  z-index: 100;
 
   justify-content: center;
   align-items: center;   
