--- a/app/style/parts/_graphic.scss
+++ b/app/style/parts/_graphic.scss
@@ -1,11 +1,11 @@
 .graphic-wrapper{
-	background-color: #5fb0ee; 
+	background-color: $white; 
 }
 .graphic{	
 	padding: 100px 40px;
 	.graphic-title{
 		font-size: 48px;
-	    color: #fff;
+	    color: $black;
 	    text-align: center;
 	    margin-bottom: 100px;
 	    text-transform: capitalize;	
@@ -16,24 +16,21 @@
 		display: inline-block;
 		padding-bottom: 20px;
 		&:after{
-	    	content: '';
-	    	position: absolute;
-	    	bottom: 0;
-	    	left: 50%;
-	    	transform: translateX(-50%);
-	    	height: 5px;
-	    	width: 120%;
-	    	background-color: #fff;
-	    }
+    	content: '';
+    	position: absolute;
+    	bottom: 0;
+    	left: 50%;
+    	transform: translateX(-50%);
+    	height: 5px;
+    	width: 120%;
+    	background-color: #fff;
+    }
 	}
 	.subtitle{
 		font-size: 40px;
-	    color: #fff;
-	    text-align: center;
-	    margin-bottom: 40px;
-	    &second{
-	    	text-transform: capitalize;
-	    }	    
+    color: $black;
+    text-align: center;
+    margin-bottom: 40px;	      
 	}
 
 	.panels{
@@ -116,7 +113,7 @@
 		padding: 0 10px;
 		font-size: 24px;
     line-height: 1.2;
-    color: #fff;
+    color: #666;
 
 		display: flex;
 		align-items: center;
@@ -137,7 +134,7 @@
 		}			
 		font-size: 32px;
 		line-height: 1.5;
-    color: #fff;	    
+    color: #666;	    
     text-transform: capitalize;
     text-align: center;
 	}
