--- a/app/style/components/_modal.scss
+++ b/app/style/components/_modal.scss
@@ -1,21 +1,29 @@
-.modal{	
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  background-color: rgba(0,0,0,0.7);
+.modal{	  
   display: none; 
-  z-index: 100;
-
-  justify-content: center;
-  align-items: center;   
+}
+.vanilla-modal{
+  .modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;  
+    background-color: rgba(0,0,0,0.7);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.5s, z-index 0s 0.5s;
+  }
 }
 
-.modal-visible{
+.modal-visible{  
   .modal{
-    display: flex;      
+    z-index: 99;
+    opacity: 1;
+    transition: opacity 0.5s;          
   }  
 }
 
