--- a/app/style/components/_modal.scss
+++ b/app/style/components/_modal.scss
@@ -44,7 +44,7 @@
   width: 60px;
   height: 60px; 
   padding: 10px; 
-  background-color: #fff;
+  background-color: transparent;
 }
 .close-icon{
   width: 100%;
