--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -33,6 +33,7 @@ html {
 @import "components/header";
 @import "components/footer";
 @import "components/modal";
+@import "components/main";
 
 /*=========================================================
 ///////////////////////////////////////////////////////////
