--- a/app/style/components/_header.scss
+++ b/app/style/components/_header.scss
@@ -1,17 +1,33 @@
 .header-wrapper{
 	position: relative;	
 	width: 100%;
+	background-color: #fff;
+	z-index: 50;
 	&:after{
 		content:'';
 		position: absolute;
-		bottom: 20px;
+		bottom: 0;
 		height: 1px;
 		width: 100%;
 		background-color: rgba(51, 51, 51, 0.15);
 	}
 }
+
+.headroom {
+	position: fixed;
+  top: 0;
+  will-change: transform;
+  transition: transform 200ms linear;
+}
+.headroom--pinned {
+    transform: translateY(0%);    
+}
+.headroom--unpinned {
+    transform: translateY(-100%);    
+}
+
 .header{
-	padding: 20px 30px 40px;
+	padding: 20px 30px 20px;	
 	display: flex;	
 	flex-wrap: wrap;	
 	justify-content: center;	
@@ -20,7 +36,8 @@
 		justify-content: space-between;	
 	}	
 	.logo-container{		
-		width: 200px;    
+		width: 200px;
+		height: 60px;   
 	}
 	.logo{
 		width: 100%;		
@@ -65,7 +82,7 @@
 		list-style: none;				
 		min-width: 100%;
 		padding: 20px 5px 10px;
-		background-color: $white;
+		background-color: #fff;
 		position: absolute;		
 		top: 100%;
 		left: 0;
