--- a/app/style/parts/_analiz.scss
+++ b/app/style/parts/_analiz.scss
@@ -1,12 +1,12 @@
 .analiz-wrapper{
-  background-color: $background-blue;
+  background-color: #fff;
 }
 .analiz{
 	overflow: auto;
   padding: 80px 0 120px;  
   .analiz-title{
     font-size: 48px;
-    color: $white;
+    color: $black;
     text-align: center;
     margin-bottom: 50px;
   }
