Pictures replaced and some style changed

--- a/app/style/parts/_services.scss
+++ b/app/style/parts/_services.scss
@@ -1,5 +1,5 @@
 .services-wrapper{
-	background-color: rgba(127,127,127,0.5);
+	background-color:#000c0ecc;
 	position: relative;
 	overflow: hidden;
 	
