--- a/app/style/_typography.scss
+++ b/app/style/_typography.scss
@@ -128,6 +128,6 @@ a{
 /*=========================================================
   05. #COLOR TEXT
 =========================================================*/
-// .text-white{
-//   color: $white;
-// }
+ .text-white{
+   color: $white;
+ }
