--- a/app/style/_variables.scss
+++ b/app/style/_variables.scss
@@ -7,7 +7,7 @@ $black: 					#000000;
 $white: 					#ffffff; 
 $text-color: 				#333333;
 $active-color: 				#3EC2BA;
-$background-blue:			#5FB0EE;
+$background-blue:			#34b1c4;
 /*=========================================================
 ///////////////////////////////////////////////////////////
   FONTS
