--- a/app/style/parts/_check.scss
+++ b/app/style/parts/_check.scss
@@ -2,7 +2,10 @@
 	padding: 80px 10% 120px;
 	text-align: center;	
 	.check-title{
-		font-size: 48px;
+		font-size: 40px;
+		@include breakpoint(medium){
+			font-size: 48px;
+		}
 		color: $black;
 		margin-bottom: 40px;
 	}
