--- a/app/style/parts/_about.scss
+++ b/app/style/parts/_about.scss
@@ -7,32 +7,26 @@
 		padding: 80px 20% 120px;
 	}
 	.about-title{
-		font-size: 48px;
+		font-size: 40px;
+		@include breakpoint(medium){
+			font-size: 48px;
+		}
 		color: $white;
 		text-align: center;
 		margin-bottom: 50px;
-	}
-	.img-container{			
-		width: 240px;
-		height: 140px;	
-		@include breakpoint(medium){
-			width: 400px;
-			height: 233px;
-		}
-		max-width: 100%;
-    margin: 0 auto 50px;    
-    border-radius: 50%;
-    overflow: hidden;
-	}
+	}	
 	.about-img{
-		display: block;
-		width: 100%;
-    height: 100%;   
-    object-fit: cover;
-    object-position: center center;
+		display: block;	
+		width: 45%;	
+		margin: 15px auto;
+		@include breakpoint(small){	
+			margin: 15px;
+			float: left;
+		}	
 	}
 	.about-text{
 		font-size: 20px;
 		line-height: 1.5;
+		text-align: justify;
 	}
 }
