--- a/app/style/parts/_services.scss
+++ b/app/style/parts/_services.scss
@@ -13,12 +13,18 @@
     }    
 	
 	.services-main-title{
-		font-size: 48px;
+		font-size: 40px;
+    @include breakpoint(medium){
+      font-size: 48px;
+    }
 		color: $white;
 		margin-bottom: 50px;
 	}
 	.services-title{
-		font-size: 40px;
+		font-size: 36px;
+    @include breakpoint(medium){
+      font-size: 40px;
+    }
 		color: $white;	
 		&:not(:last-child){
 			margin-bottom: 20px;
