--- a/app/style/_button.scss
+++ b/app/style/_button.scss
@@ -2,44 +2,46 @@
 	display: inline-block;	
 }
 
-.button-check{
-	$button-check-color: #5793E8;
-	background-color: $button-check-color;
-	border-radius: 20px;
-    border: 1px solid $button-check-color;
-    font-size: 14px;
-    color: $white;
-    padding: 25px 50px;
-    text-transform: uppercase;
-    &:hover{
-    	background-color: darken($button-check-color, 10%);
-    }
-}
-
 .lead-button{
-    $button-lead-color: #fafafa;
-    background-color: $button-lead-color;
-    border-radius: 20px;
-    border: 1px solid $button-lead-color;
-    font-size: 14px;
-    font-weight: 700;
-    color: $background-blue;
-    padding: 15px 20px;
-    text-transform: uppercase;
-    margin: 0 10px 20px;
+  $button-lead-color: #fafafa;
+  background-color: $button-lead-color;
+  border-radius: 20px;
+  border: 1px solid $button-lead-color;
+  font-size: 14px;
+  font-weight: 700;
+  color: $background-blue;
+  padding: 15px 20px;
+  text-transform: uppercase;
+  margin: 0 10px 20px;
+  &:hover{
+    background-color: darken($button-lead-color, 10%);
+    border: 1px solid darken($button-lead-color, 10%);
+  }
+  &.inverted{
+    color: $button-lead-color;
+    background-color: $background-blue;
+    border: 1px solid $background-blue;
     &:hover{
-        background-color: darken($button-lead-color, 10%);
-        border: 1px solid darken($button-lead-color, 10%);
-    }
-
-
-    &.inverted{
-        color: $button-lead-color;
-        background-color: $background-blue;
-        border: 1px solid $background-blue;
-        &:hover{
-            background-color: darken($background-blue, 10%);
-            border: 1px solid darken($background-blue, 10%);
-        }        
-    }
+        background-color: darken($background-blue, 10%);
+        border: 1px solid darken($background-blue, 10%);
+    }        
+  }
 }
+
+.city-button{
+  $button-city-color: #bbb;
+  display: inline-block;    
+  background-color: $button-city-color;
+  border-radius: 3px;
+  border: 1px solid $button-city-color;
+  font-size: 16px;
+  font-weight: 700;
+  color: #000;
+  padding: 15px 20px;    
+  margin: 0 5px 20px;
+  &:hover, &.active{
+      background-color: darken($button-city-color, 30%);
+      border: 1px solid darken($button-city-color, 30%);
+  }
+}
+
