--- a/app/style/parts/_analiz.scss
+++ b/app/style/parts/_analiz.scss
@@ -12,5 +12,17 @@
     color: $black;
     text-align: center;
     margin-bottom: 50px;
+  }  
+}
+.js-atlas{
+  display: none;
+  &.open{
+    display: block;
   }
+}
+.city-button-container{
+  padding: 40px 40px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
