--- a/app/style/_fonts.scss
+++ b/app/style/_fonts.scss
@@ -5,11 +5,33 @@
 =========================================================*/
 @font-face {
   font-family: 'helvetica';  
-  src: url('./fonts/HelveticaNeueCyr-Light.ttf') format('truetype'),
-  // src: url('./fonts/Graphik-Regular-Web.eot?#iefix') format('embedded-opentype'),
-  //      url('./fonts/Graphik-Regular-Web.woff2') format('woff2'),
-        url('./fonts/HelveticaNeueCyr-Light.woff') format('woff');
+  src: url('./fonts/HelveticaNeueCyr-Light.woff') format('woff'),
+       url('./fonts/HelveticaNeueCyr-Light.ttf') format('truetype');
+  font-weight:  300;
+  font-style:   normal;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: 'helvetica';  
+  src: url('./fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
+       url('./fonts/HelveticaNeueCyr-Roman.ttf') format('truetype');
   font-weight:  400;
+  font-style:   normal;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: 'helvetica';  
+  src: url('./fonts/HelveticaNeueCyr-Medium.woff') format('woff'),
+       url('./fonts/HelveticaNeueCyr-Medium.ttf') format('truetype');
+  font-weight:  500;
+  font-style:   normal;
+  font-stretch: normal;
+}
+@font-face {
+  font-family: 'helvetica';  
+  src: url('./fonts/HelveticaNeueCyr-Bold.woff') format('woff'),
+       url('./fonts/HelveticaNeueCyr-Bold.ttf') format('truetype');
+  font-weight:  700;
   font-style:   normal;
   font-stretch: normal;
 }
