--- a/app/style/parts/_graphic.scss
+++ b/app/style/parts/_graphic.scss
@@ -3,6 +3,7 @@
 }
 .graphic{	
 	padding: 100px 40px;
+
 	.graphic-title{
 		font-size: 40px;
 		@include breakpoint(medium){
@@ -10,14 +11,14 @@
 		}
     color: $black;
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
     text-transform: capitalize;	
     overflow: hidden;    
 	}
 	.title-text{
 		position: relative;
 		display: inline-block;
-		padding-bottom: 20px;
+		padding-bottom: 10px;
 		&:after{
     	content: '';
     	position: absolute;
@@ -26,7 +27,7 @@
     	transform: translateX(-50%);
     	height: 5px;
     	width: 120%;
-    	background-color: #fff;
+    	background-color: #34b1c4;
     }
 	}
 	.subtitle{
