dom-i18n + view full screen on modal

--- a/app/style/_variables.scss
+++ b/app/style/_variables.scss
@@ -18,6 +18,9 @@ $secondary-font-family: "Open Sans";
 $heading-font-family: 'helvetica', sans-serif; 
 $button-font-family: "Open Sans"; 
 $global-font-size: 16px;
+
+$close-modal-size: 60px;
+
 $scale-font-for-xsmall: 1;
 $scale-font-for-small: 1;
 $scale-font-for-medium: 1;
