Small changes in modal header

--- a/app/style/components/_modal.scss
+++ b/app/style/components/_modal.scss
@@ -60,7 +60,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid rgba(32, 145, 238, 0.089);
 }
 .modal-link{
   color: #34b1c4;
