--- a/app/style/parts/_instructions.scss
+++ b/app/style/parts/_instructions.scss
@@ -1,10 +1,11 @@
-.instructions-wrapper{
-  background-color: #393f43;
+.instructions-text-wrapper{
+
 }
-.instructions{
-  padding: 80px 0 120px;
-  text-align: center; 
-  .instructions-title{
+.instructions-text{  
+  padding: 100px 40px;
+  text-align: center;
+   
+  .title{
     font-size: 40px;
     @include breakpoint(medium){
       font-size: 48px;
@@ -27,6 +28,41 @@
       background-color: #34b1c4;
     }
   }
+  .text{
+    margin-bottom: 60px;
+  }
+}
+
+
+.instructions-map-wrapper{
+  background-color: #393f43;
+}
+.instructions-map{
+  padding: 80px 0 120px;
+  text-align: center; 
+  .title{
+    font-size: 40px;
+    @include breakpoint(medium){
+      font-size: 48px;
+    }
+    color: $white;
+    margin-bottom: 40px;
+  }
+  .title-text{
+    position: relative;
+    display: inline-block;
+    padding-bottom: 10px;
+    &:after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 5px;
+      width: 120%;
+      background-color: #34b1c4;
+    }
+  }  
   .instr-scheme{
     //position: relative;
   }
@@ -57,6 +93,7 @@
   .img{
     width: 100%;
     height: 100%;
+    box-shadow: 0 15px 165px 0 rgba(0,0,0,.9);
   }
   /////////////////
   .arrow1{
@@ -163,5 +200,5 @@
     bottom: 72%;
     right: 109%;
     text-align: right;  
-  }
+  }  
 }
