--- a/app/style/_button.scss
+++ b/app/style/_button.scss
@@ -13,6 +13,7 @@
   padding: 15px 20px;
   text-transform: uppercase;
   margin: 0 10px 20px;
+  transition: color  0.5s ease, border-color  0.5s ease;
   &:hover{
     background-color: darken($button-lead-color, 10%);
     border: 1px solid darken($button-lead-color, 10%);
@@ -38,7 +39,8 @@
   font-weight: 700;
   color: $button-city-color;  
   padding: 15px 20px;    
-  margin: 0 5px 20px;
+  margin: 0 5px 10px;
+  transition: color  0.5s ease, border-color  0.5s ease;
   &:hover{      
     border: 3px solid #34b1c4;
     color: #34b1c4;
@@ -50,3 +52,25 @@
   }
 }
 
+.full-view-button{
+  $button-city-color: #666;
+  display: inline-block;    
+  background-color: #fff;
+  border-radius: 5px;
+  border: 3px solid $button-city-color;
+  font-size: 18px;
+  font-weight: 700;
+  color: $button-city-color;  
+  padding: 15px 30px;    
+  margin: 0 5px 10px;
+  transition: color  0.5s ease, border-color  0.5s ease;
+  &:hover{      
+    border: 3px solid #34b1c4;
+    color: #34b1c4;
+  }
+  &.active{
+    border: 3px solid #34b1c4;
+    color: #34b1c4;
+    text-decoration: underline;
+  }
+}
