--- a/app/style/parts/_graphic.scss
+++ b/app/style/parts/_graphic.scss
@@ -3,40 +3,7 @@
 }
 .graphic{	
 	padding: 100px 40px;
-
-	.graphic-title{
-		font-size: 40px;
-		@include breakpoint(medium){
-			font-size: 48px;
-		}
-    color: $black;
-    text-align: center;
-    margin-bottom: 20px;
-    text-transform: capitalize;	
-    overflow: hidden;    
-	}
-	.title-text{
-		position: relative;
-		display: inline-block;
-		padding-bottom: 10px;
-		&:after{
-    	content: '';
-    	position: absolute;
-    	bottom: 0;
-    	left: 50%;
-    	transform: translateX(-50%);
-    	height: 5px;
-    	width: 120%;
-    	background-color: #34b1c4;
-    }
-	}
-	.subtitle{
-		font-size: 40px;
-    color: $black;
-    text-align: center;
-    margin-bottom: 40px;	      
-	}
-
+  overflow: auto;
 	.panels{
 		display: flex;
 		flex-wrap: wrap;
