--- a/app/style/components/_main.scss
+++ b/app/style/components/_main.scss
@@ -1,3 +1,16 @@
 .main{
 	padding: 100px 0 0;
+
+  #index-section{
+    display: none;
+    &.open{
+      display: block;
+    }
+  }
+  #instruction-section{
+    display: none;
+    &.open{
+      display: block;
+    }
+  }
 }
